adding bower_component folder to static folder group, adding some create table script

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,19 +2,35 @@
 <html lang="en" ng-app="willGiveApp">
 <head>
     <meta charset="utf-8">
-    <title>WillGive</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
+    <title>WillGive</title>
+    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
+
+    <script src="jquery/dist/jquery.js"></script>
+    <script src="angular/angular.js"></script>
     <script src="angularJs/willGiveApp.js"></script>
 </head>
 <body>
 
-<div class="view-container">
-    <div ng-view class="view-frame"></div>
-    Welcome to WillGive
-</div>
-
+    <div class="view-container">
+        <div ng-view class="view-frame"></div>
+        Welcome to WillGive
+    </div>
+    <div class="container">
+        <form class="form-signin">
+            <h2 class="form-signin-heading">Please sign in</h2>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" value="remember-me"> Remember me
+                </label>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </form>
+    </div>
 </body>
 </html>
