--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,10 +38,10 @@
                             <img alt="First slide" src="resources/images/donateNow_1.png">
                         </div>
                         <div class="item">
-                            <img alt="Second slide" src="resources/images/donateNow_2.jpg">
+                            <img alt="Second slide" src="resources/images/donateNow_2.png">
                         </div>
                         <div class="item">
-                            <img alt="Third slide" src="resources/images/donateNow_3.jpeg">
+                            <img alt="Third slide" src="resources/images/donateNow_3.png">
                         </div>
                     </div>
 
