improve login related UI

--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -17,9 +17,10 @@
                 <li class="#"><a href="/contactus">Contact Us</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/login">Login</a></li>
-                <li><a href="#">Signup</a></li>
+                <li><a href="/login/signin">SignIn</a></li>
+                <li><a href="/login/signup">SignUp</a></li>
             </ul>
         </div>
+
     </div>
 </nav>
