adding reset password page

--- a/views/login/forgotPassword.ejs
+++ b/views/login/forgotPassword.ejs
@@ -21,8 +21,12 @@
         <h3>WillGive Password Reset</h3>
     </div>
     <hr align="left" width="100%" background="0xff0000">
-
-    <div id="afterResetSubmit" class="text-center" style="padding-bottom: 10px">
+    <div id="afterResetSubmit"  style="padding-bottom: 10px; display: none">
+        Password reset instructions have been sent.
+        This may take a minute. Be sure to check your spam folder and add hello@willgive.com to your address book to ensure delivery.
+        <br><br>
+        If you require additional help, please contact us at
+        <a href="mailto:hello@willgive.com?Subject=Hello%20again">hello@willgive.com</a>
     </div>
     <form class="form-forgotpassword span4 text-center" action="/login/forgotpassword" method="post" style="padding-top: 30px">
 
