--- a/views/login/signup.ejs
+++ b/views/login/signup.ejs
@@ -24,8 +24,8 @@
           <span class="input-group-addon">
             <span class="glyphicon glyphicon-envelope"></span>
           </span>
-            <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <label for="signupEmail" class="sr-only">Email address</label>
+            <input type="email" id="signupEmail" class="form-control" placeholder="Email address" required autofocus>
         </div>
         <div style="padding-top: 2px"> &nbsp</div>
 
@@ -33,8 +33,8 @@
               <span class="input-group-addon">
                 <span class="glyphicon glyphicon-lock"></span>
               </span>
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <label for="signupPassword" class="sr-only">Password</label>
+            <input type="password" id="signupPassword" class="form-control" placeholder="Password" required>
         </div>
 
         <div style="padding-top: 20px"> &nbsp</div>
