--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -25,10 +25,10 @@
 
         </div>
         <div class="col-md-6">
-            <p>Butler's Wharf is an English historic building on the south bank of the River Thames, just east of London's Tower Bridge, now housing luxury flats and restaurants. Lying between the picturesque street Shad Thames and the Thames Path, it overlooks both the bridge and St Katharine Docks on the other side of the river. Butler's Wharf is also used as a term for the surrounding area.</p>
-            <p>Butler's Wharf is also used as a name for the surrounding area, otherwise called Shad Thames after the main local street.</p>
-            <p>Source: Wikipedia.org</p>
-            <p>This is a sample website, don't pay any attention to the contents.</p>
+            <p>           
+	Our vision -- Extend love, offer appreciation and inspire change to the world</P>
+           <P> Our mission is to create a top-notch service that delights the giving back to community experience.
+            </p>
         </div>
     </div>
 </div>
