--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,8 +1,8 @@
-<footer class="footer navbar-fixed-bottom">
+﻿<footer class="footer navbar-fixed-bottom">
     <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <p>© Copyright of WillGive LLC.</p>
+            <p>© 2015 WillGive</p>
         </div>
         <div class="col-md-6">
             <ul class="nav nav-pills pull-right">
