Correct the active menu

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -10,7 +10,7 @@
     <script src="jquery/dist/jquery.js"></script>
     <script src="angular/angular.js"></script>
     <script src="angularJs/willGiveApp.js"></script>
-
+    <%activeMenu = "About"%>
     <%include layout/navbar.ejs%>
 </head>
 <body>
