--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <script src="angularJs/willGiveApp.js"></script>
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-54ade3b442958c1a" async="async"></script>
-
+   <%activeMenu = "Home"%>
     <%include layout/navbar.ejs%>
 </head>
 <body>
