--- a/views/login/signin.ejs
+++ b/views/login/signin.ejs
@@ -11,7 +11,7 @@
     <script src="/jquery/dist/jquery.js"></script>
     <script src="/angular/angular.js"></script>
     <script src="/angularJs/willGiveApp.js"></script>
-
+    <%activeMenu = "SignIn"%>
     <%include ../layout/navbar.ejs%>
 </head>
 <body>
