--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>WillGive</title>
-    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
-
     <script src="jquery/dist/jquery.js"></script>
+    <script src="bootstrap/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
     <script src="angular/angular.js"></script>
     <script src="angularJs/willGiveApp.js"></script>
     <!-- Go to www.addthis.com/dashboard to customize your tools -->
@@ -23,10 +23,8 @@
             <h1 class="text-center"> Welcome to WillGive </h1>
         </div>
 
-
         <div class="row">
             <div class="col-md-12">
-
                 <div id="carousel-example-generic" class="carousel slide" data-interval="3000" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -36,12 +34,15 @@
                     <div class="carousel-inner">
                         <div class="item active">
                             <img alt="First slide" src="resources/images/donateNow_1.png">
+                            <div class="carousel-caption">1</div>
                         </div>
                         <div class="item">
                             <img alt="Second slide" src="resources/images/donateNow_2.png">
+                            <div class="carousel-caption">2</div>
                         </div>
                         <div class="item">
                             <img alt="Third slide" src="resources/images/donateNow_3.png">
+                            <div class="carousel-caption">3</div>
                         </div>
                     </div>
 
