--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -23,10 +23,25 @@
                 <li class="<%=menuClass[1]%>"><a href="/aboutus">About Us</a></li>
                 <li class="<%=menuClass[2]%>"><a href="/contactus">Contact Us</a></li>
             </ul>
+            <% if ( 'undefined' == typeof user ) { %>
             <ul class="nav navbar-nav navbar-right">
                 <li class="<%=menuClass[3]%>"><a href="/login/signin">SignIn</a></li>
                 <li class="<%=menuClass[4]%>"><a href="/login/signup">SignUp</a></li>
             </ul>
+            <% } else { %>
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" data-toggle="dropdown" class="dropdown-toggle">Welcome, <%=user.firstName%> <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Settings</a></li>
+                    </ul>
+                </li>
+                <li class="<%=menuClass[4]%>"><a href="/login/logout">Logout</a></li>
+            </ul>
+            <% }%>
         </div>
 
     </div>
