use new index page

--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#exampleNavbarCollapse">
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">WillGive</a>
+            <a class="navbar-brand" href="/">WillGive</a>
         </div>
         <% 
          var menuClass = new Array("#", "#","#","#","#","#");
@@ -49,3 +49,7 @@
 
     </div>
 </nav>
+
+<div style="padding-bottom: 30px">
+    &nbsp;
+</div>
