--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -14,7 +14,7 @@
     <%include layout/navbar.ejs%>
 </head>
 <body>
-<div class="container">
+<div class="container" style="padding-top: 2%">
     <div class="row text-center">
         <div class="col-md-12"><h2  style="margin:0;"><b>About</b></h2></div>
     </div>
