--- a/views/indexUber.ejs
+++ b/views/indexUber.ejs
@@ -8,6 +8,8 @@
 <!-- attach CSS styles -->
     <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" />
+    <%activeMenu = "Home"%>
+    <%include layout/navbar.ejs%>
 </head>
 
 
@@ -16,29 +18,7 @@
 <!--  BODY PAGE CONTENT -->
 <!-- attach JavaScripts -->
 <!-- navigation panel -->
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
 
-
-        <div class="navbar-header  navbar-center ">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-main">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">WillGive</a>
-        </div>
-
-        <div class="collapse navbar-collapse " id="navbar-collapse-main">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#home">Login</a></li>
-                <li><a href="#about">Register</a></li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
 
 
 <!-- first section - Home -->
