--- a/views/indexUber.ejs
+++ b/views/indexUber.ejs
@@ -112,12 +112,8 @@
 </div>
 <!-- /fourth section -->
 
-<footer>
-    <hr />
-    <div class="container">
-        <p class="text-right">Copyright &copy; Your Company 2014</p>
-    </div>
-</footer>
+<%include layout/footer.ejs%>
+
 <!-- /footer -->
 
 <script src="jquery/dist/jquery.js"></script>
