--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,4 +1,14 @@
-﻿<footer class="footer navbar-fixed-bottom">
+﻿<style>
+    * {
+        margin: 0;
+    }
+    html, body {
+        height: 100%;
+    }
+
+</style>
+<footer class="footer site-footer" style="position: relative; height: 50px;clear:both;">
+    </hr>
     <div class="container">
     <div class="row">
         <div class="col-md-6">
