--- a/views/login/signin.ejs
+++ b/views/login/signin.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<div class="container" style="min-height: 50%">
+<div class="container" style="height:auto; min-height: 90%; margin: 0 auto -80px;">
     <h2 class="form-signin-heading text-center">WillGive Login</h2>
     <hr align="left" width="100%" background="0xff0000">
     <form id="userSignInForm" class="form-signin col-xs-4 col-xs-offset-1" action="/services/login/signin" method="post" style="padding-top: 2%">
