--- a/views/login/signup.ejs
+++ b/views/login/signup.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<div class="container" style="min-height: 50%">
+<div class="container" style="min-height: 70%; position:relative">
     <h2 class="form-signin-heading text-center">WillGive SignUp</h2>
     <hr align="left" width="100%" background="0xff0000">
     <form id="userSignupForm" class="form-signin col-xs-4 col-xs-offset-1"  method="post" style="padding-top: 2%">
@@ -71,13 +71,13 @@
             <li><span class="glyphicon glyphicon-home" aria-hidden="true"></span><span class="alt"> time:</span> Quick sign in, no passwords</li>
         </ul>
     </div>
-
-</div>
-<div class="container" style="padding-top: 2%">
-    <div class="text-center" >
-        Already have an account? <a href="/login/signin">Sign In</a>
+    <div class="container" style="padding-top: 2%">
+        <div class="text-center" >
+            Already have an account? <a href="/login/signin">Sign In</a>
+        </div>
     </div>
 </div>
+
 <%include ../layout/footer.ejs%>
 
 <script src="/jquery/dist/jquery.min.js"></script>
