refactoring move images/css from bower folder to public folder

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -21,7 +21,7 @@
     <hr />
     <div class="row text-center">
         <div class="col-md-6">
-            <img alt="about-us-page" src="resources/images/launch_icon.png" />
+            <img alt="about-us-page" src="images/launch_icon.png" />
 
         </div>
         <div class="col-md-6">
