adding user profile/settings page

--- a/views/aboutUs.ejs
+++ b/views/aboutUs.ejs
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>WillGive</title>
-    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
 
-    <script src="jquery/dist/jquery.js"></script>
-    <script src="angular/angular.js"></script>
-    <script src="angularJs/willGiveApp.js"></script>
     <%activeMenu = "About"%>
     <%include layout/navbar.ejs%>
 </head>
@@ -32,7 +29,10 @@
         </div>
     </div>
 </div>
-</body>
 <%include layout/footer.ejs%>
+
+<script src="/jquery/dist/jquery.js"></script>
+<script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+</body>
 
 </html>
