--- a/views/indexUber.ejs
+++ b/views/indexUber.ejs
@@ -6,8 +6,8 @@
     <title>Bootstrap one-page template with Parallax effect | Script Tutorials</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <!-- attach CSS styles -->
-    <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/style.css" rel="stylesheet" />
     <%activeMenu = "Home"%>
     <%include layout/navbar.ejs%>
 </head>
@@ -116,10 +116,9 @@
 
 <!-- /footer -->
 
-<script src="jquery/dist/jquery.js"></script>
-<script src="bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/jquery/dist/jquery.js"></script>
+<script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 
-<script src="js/main.js"></script>
 </body>
 
 </html>
