--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -4,10 +4,11 @@
     }
     html, body {
         height: 100%;
+
     }
 
 </style>
-<footer class="footer site-footer" style="position: relative; height: 50px;clear:both;">
+<footer class="footer site-footer" style="width: 100%;background-color: #808080; color: #000000; position: relative; height: 50px;clear:both">
     </hr>
     <div class="container">
     <div class="row">
