--- a/views/login/signin.ejs
+++ b/views/login/signin.ejs
@@ -20,7 +20,7 @@
     <form id="userSignInForm" class="form-signin col-xs-4 col-xs-offset-1" action="/services/login/signin" method="post" style="padding-top: 2%">
         <div id="signInReporter" style="padding-bottom: 2%"></div>
         <% if (error) { %>
-        <div class="text-center" style="color: red; font-size: small; font-style: italic; padding-bottom: 1% "> <%= error %> </div>
+          <div class="text-center alert" style="color: red; font-size: small; font-style: italic; padding-bottom: 1% "> <%= error %> </div>
         <% } %>
         <div class="input-group input-group-lg">
           <span class="input-group-addon">
