adding user icon

--- a/views/login/userSettings.ejs
+++ b/views/login/userSettings.ejs
@@ -31,7 +31,7 @@
                         <a href="/users/paymentMethod" style="color: #000000;">Payment Method</a>
                     </li>
                     <li>
-                        <a href="/users/contribution" style="color: #000000;">Contribution</a>
+                        <a href="/users/contribution" style="color: #000000;">My Contributions</a>
                     </li>
                 </ul>
             </div>
