--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -34,12 +34,16 @@
             <% } else { %>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="" data-toggle="dropdown" class="dropdown-toggle">Welcome, <%=user.firstName%> <b class="caret"></b></a>
+                    <a href="" data-toggle="dropdown" class="dropdown-toggle">
+                        <img src="<%=user.imageIconUrl%>" height="30" width="30"/>
+                        &nbsp;<%=user.firstName%>
+                        <b class="caret"></b>
+                    </a>
                     <ul class="dropdown-menu">
                         <li><a href="/users/account">Edit Profile</a></li>
                         <li><a href="/users/settings">Settings</a></li>
                         <li><a href="/users/settings">Payment Method</a></li>
-                        <li><a href="/users/contribution">Contribution</a></li>
+                        <li><a href="/users/contribution">My Contributions</a></li>
                         <li class="divider"></li>
                         <li><a href="/login/logout">Logout</a></li>
                     </ul>
