--- a/views/login/userProfile.ejs
+++ b/views/login/userProfile.ejs
@@ -31,7 +31,7 @@
                         <a href="/users/paymentMethod" style="color: #000000;">Payment Method</a>
                     </li>
                     <li>
-                        <a href="/users/contribution" style="color: #000000;">Contribution</a>
+                        <a href="/users/contribution" style="color: #000000;">My Contributions</a>
                     </li>
                 </ul>
             </div>
@@ -39,10 +39,17 @@
 
         <!-- main area -->
         <div class="col-xs-12 col-sm-9" data-spy="scroll"  style="padding-left: 5%" data-target="#sidebar-nav">
-            <div class="row">
-                <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px; padding-bottom: 3%;" id="profilePicture">Picture</h3>
-                <div class="col-xs-9 col-xs-height col-top">
-                    <p>Twitter Bootstrap is a front-end toolkit to rapidly build web applications. It is a framework that uses some of the latest browser techniques to provide you with stylish typography, navigation, buttons, tables, etc. One of the primary changes in Bootstrap 3 is an emphasis on Mobile-First responsive design. The goal is to elevate the mobile experience to a first-class citizen of the design process, because several billion mobile users is quite a large market to tap into. So, sites built with the current Bootstrap version target mobile devices and scale for larger screens depending on screen size. </p>
+            <div class="row" style="min-height: 100px; height: auto">
+                <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px; padding-bottom: 3%;" id="profilePicture">
+                    Picture
+                </h3>
+                <div class="col-xs-2 col-xs-height col-top">
+                    <img src="<%=user.imageIconUrl%>" height="80" width="80"/>
+                </div>
+                <div class="col-xs-6 col-xs-height col-top text-center">
+                    <form action="/where/to/upload/the/file">
+                        <input type="file" id="myFileInput" name="nameUsedToAccessTheFileOnTheServer" />
+                    </form>
                 </div>
             </div>
             </hr>
@@ -54,7 +61,7 @@
                         <label class="control-label col-xs-4" for="firstName">Email</label>
                         <div class="input-group col-xs-6"  >
                             <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-email"></span>
+                                <span class="glyphicon glyphicon-envelope"></span>
                             </span>
                             <input type="text" id="email" name="email" class="form-control" placeholder="<%=user.email%>" readonly>
                         </div>
