--- a/views/login/userProfile.ejs
+++ b/views/login/userProfile.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="willGiveApp" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
     <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
-
+    <script src="/jquery/dist/jquery.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/jquery-validation/dist/jquery.validate.js"></script>
     <%activeMenu = "SignUp"%>
     <%include ../layout/navbar.ejs%>
 </head>
@@ -39,6 +41,9 @@
 
         <!-- main area -->
         <div class="col-xs-12 col-sm-9" data-spy="scroll"  style="padding-left: 5%" data-target="#sidebar-nav">
+
+
+
             <div class="row" style="min-height: 100px; height: auto">
                 <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px; padding-bottom: 3%;" id="profilePicture">
                     Picture
@@ -54,11 +59,10 @@
             </div>
             </hr>
             <div class="row">
-
                 <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px; padding-bottom: 3%;"  id="profileBasicInfo">Basic Info</h3>
                 <div class="col-xs-9 col-xs-height col-top" style="padding-bottom: 1%">
                     <div class="form-group" style="padding-bottom: 1%">
-                        <label class="control-label col-xs-4" for="firstName">Email</label>
+                        <label class="control-label col-xs-4" for="email">Email</label>
                         <div class="input-group col-xs-6"  >
                             <span class="input-group-addon">
                                 <span class="glyphicon glyphicon-envelope"></span>
@@ -93,41 +97,48 @@
             </div>
             </hr>
             <div class="row">
-
-            <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px;padding-bottom: 3%;"  id="profilePassword">Password</h3>
-            <div class="col-xs-9 col-xs-height col-top">
-                <div class="form-group" style="padding-bottom: 1%">
-                    <label class="control-label col-xs-4" for="oldPassword">Old Password</label>
-                    <div class="input-group col-xs-6" >
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-lock"></span>
-                        </span>
-                        <input type="password" id="oldPassword" name="oldPassword" class="form-control" placeholder="" minlength="8" required>
+                <h3 class="col-xs-3 col-xs-height col-top" style="margin-top: 0px;padding-bottom: 3%;"  id="profilePassword">Password</h3>
+                <div class="col-xs-9 col-xs-height col-top" style="margin-top: 0px;">
+                    <%if( user.provider=='facebook') { %>
+                    <div class="form-group" style="padding-bottom: 1%">
+                        <p style="margin-top: 0px; float: left;color: red"><strong>You've logged in using Facebook with no password.</strong></p><br>
+                        </div>
+                    <% } else { %>
+                    <% }%>
+                    <div class="form-group" style="padding-bottom: 1%">
+                        <label class="control-label col-xs-4" for="oldPassword">Old Password</label>
+                        <div class="input-group col-xs-6" >
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-lock"></span>
+                            </span>
+                            <input type="password" id="oldPassword" name="oldPassword" class="form-control" placeholder="" minlength="8" required>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group" style="padding-bottom: 1%">
-                    <label class="control-label col-xs-4" for="newPassword">New Password</label>
+                    <div class="form-group" style="padding-bottom: 1%">
+                        <label class="control-label col-xs-4" for="newPassword">New Password</label>
 
-                    <div class="input-group col-xs-6">
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-lock"></span>
-                        </span>
-                        <input type="password" id="newPassword" name="newPassword" class="form-control" placeholder="" minlength="8" required>
+                        <div class="input-group col-xs-6">
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-lock"></span>
+                            </span>
+                            <input type="password" id="newPassword" name="newPassword" class="form-control" placeholder="" minlength="8" required>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group" style="padding-bottom: 1%">
-                    <label class="control-label col-xs-4" for="confirmPassword">Confirm Password</label>
+                    <div class="form-group" style="padding-bottom: 1%">
+                        <label class="control-label col-xs-4" for="confirmPassword">Confirm Password</label>
 
-                    <div class="input-group col-xs-6">
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-lock"></span>
-                        </span>
-                        <label for="confirmPassword" class="sr-only">Confirm Password</label>
-                        <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="" equalTo="#signupPassword" minlength="8" required>
+                        <div class="input-group col-xs-6">
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-lock"></span>
+                            </span>
+                            <label for="confirmPassword" class="sr-only">Confirm Password</label>
+                            <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="" equalTo="#signupPassword" minlength="8" required>
+                        </div>
                     </div>
-                </div>
-                <div class="col-xs-4" style="padding-top: 1%; padding-bottom: 2%;float: left">
-                    <button id="submitUpdateProfileButton" class="btn btn-primary btn-block" type="submit" >Change Password</button>
+                    <div class="col-xs-4" style="padding-top: 1%; padding-bottom: 2%;float: left">
+                        <button id="submitUpdateProfilePasswordButton" class="btn btn-primary btn-block" type="submit" >Change Password</button>
+                    </div>
+
                 </div>
             </div>
             </hr>
@@ -135,9 +146,17 @@
     </div><!--/.row-->
 </div><!--/.container-->
 <%include ../layout/footer.ejs%>
-<script src="/jquery/dist/jquery.min.js"></script>
-<script src="/angular/angular.min.js"></script>
-<script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/jquery-validation/dist/jquery.validate.js"></script>
+    <%if( user.provider=='facebook') { %>
+        <script>
+            $( document ).ready(function() {
+                $('#submitUpdateProfilePasswordButton').prop('disabled','disabled');
+                $('#oldPassword').prop('readonly',true);
+                $('#newPassword').prop('readonly',true);
+                $('#confirmPassword').prop('readonly',true);
+            });
+        </script>
+    <% } else { %>
+    <% }%>
+
 </body>
 </html>
