send welcome email after signup

--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -42,7 +42,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="/users/account">Edit Profile</a></li>
                         <li><a href="/users/settings">Settings</a></li>
-                        <li><a href="/users/settings">Payment Method</a></li>
+                        <li><a href="/users/paymentMethod">Payment Method</a></li>
                         <li><a href="/users/contribution">My Contributions</a></li>
                         <li class="divider"></li>
                         <li><a href="/login/logout">Logout</a></li>
