--- a/views/login/userSettings.ejs
+++ b/views/login/userSettings.ejs
@@ -38,7 +38,7 @@
         </div>
 
         <!-- main area -->
-        <div class="col-xs-12 col-sm-9" data-spy="scroll" data-target="#sidebar-nav">
+        <div class="col-xs-12 col-sm-9" data-spy="scroll" style="padding-left: 5%" data-target="#sidebar-nav">
             <h3 id="emailNotification">Emails From WillGive</h3>
             </hr>
             <div class="input-group col-xs-6">
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="col-xs-6" style="padding-top: 1%; padding-bottom: 2%;float: left">
-                <button id="submitUpdateProfilePasswordButton" class="btn btn-primary btn-block" type="submit" >Save</button>
+                <button id="submitUpdateProfilePasswordButton" class="btn btn-primary btn-block" type="submit" >Save All Setting</button>
             </div>
 
         </div><!-- /.col-xs-12 main -->
