--- a/views/login/userContribution.ejs
+++ b/views/login/userContribution.ejs
@@ -38,7 +38,7 @@
         </div>
 
         <!-- main area -->
-        <div class="col-xs-12 col-sm-9" data-spy="scroll" data-target="#sidebar-nav">
+        <div class="col-xs-12 col-sm-9" data-spy="scroll" style="padding-left: 5%" data-target="#sidebar-nav">
             <h1 id="section1">Comming Soon</h1>
 
 
